# nbody

./: .gitignore  CMakeLists.txt  README.md  demo.txt  plot3d.py
src/: Body.cpp  Body.h  CMakeLists.txt  Constants.h  Engine.cpp  Engine.h  RK4.cpp  RKGeneral.cpp  Ralston4.cpp  Solver.cpp  Solver.h  StringTool.cpp  StringTool.h  System.cpp  System.h  Triplet.cpp  Triplet.h  Vector.cpp  Vector.h  body.cpp  body.h  engine.cpp  engine.h  euler.cpp  euler_improved.cpp  main.cpp  nbody.cpp  ralston4.cpp  rk4.cpp  rk_general.cpp  solver.cpp  solver.h  string_tool.cpp  string_tool.h  system.cpp  system.h  triplet.cpp  triplet.h
src/solvers/: Euler.cpp  EulerImproved.cpp  Solver.cpp  Solver.h
